fixing credit card calculations

--- a/ui.kv
+++ b/ui.kv
@@ -357,7 +357,7 @@
 					Spinner:
 						id: category_field
 						text: "Food"
-						values: ["Food","Home","Transportation","Personal","Rent","House EMI","Gym","Utilities","Shopping","Petrol","Subscription/Recharge","Book","Credit Card Bill", "Credit Card UPI Bill", "Savings","Savings RD","Savings FD","Savings Gold","Debt Cleared","Others"]
+						values: ["Food","Home","Transportation","Personal","Rent","House EMI","Gym","Utilities","Shopping","Petrol","Subscription/Recharge","Book","Health/Medical","Credit Card Bill", "Credit Card UPI Bill", "Savings","Savings RD","Savings FD","Savings Gold","Debt Cleared","Others"]
 					Label:
 						text: "Device"
 						color: rgba("#000306ff")
